--- a/OurSpace/OurSpace/Base.lproj/Main.storyboard
+++ b/OurSpace/OurSpace/Base.lproj/Main.storyboard
@@ -71,9 +71,8 @@
                                 <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="27"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z2I-cI-Uhz">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z2I-cI-Uhz">
                                 <rect key="frame" x="51" y="309" width="273" height="28"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="1" green="0.16194283330000001" blue="0.24666723639999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -81,17 +80,21 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.43529411759999997" blue="0.3803921569" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="Z2I-cI-Uhz" firstAttribute="top" secondItem="YqY-xU-5SI" secondAttribute="bottom" id="2gJ-gx-Z5S"/>
+                            <constraint firstItem="Rhh-I1-9mk" firstAttribute="top" secondItem="Z2I-cI-Uhz" secondAttribute="bottom" constant="8" symbolic="YES" id="31N-TZ-drQ"/>
                             <constraint firstItem="Rhh-I1-9mk" firstAttribute="centerX" secondItem="c62-Hn-T0R" secondAttribute="centerX" id="8Fs-Z7-hSu"/>
                             <constraint firstItem="Tpg-pa-anG" firstAttribute="top" secondItem="c62-Hn-T0R" secondAttribute="bottom" constant="8" symbolic="YES" id="AgS-ve-OQc"/>
                             <constraint firstItem="Rhh-I1-9mk" firstAttribute="trailing" secondItem="Tpg-pa-anG" secondAttribute="trailing" id="B0a-Lo-ElJ"/>
                             <constraint firstItem="YqY-xU-5SI" firstAttribute="trailing" secondItem="Rhh-I1-9mk" secondAttribute="trailing" id="GIB-bh-8Nr"/>
                             <constraint firstItem="YqY-xU-5SI" firstAttribute="leading" secondItem="Rhh-I1-9mk" secondAttribute="leading" id="HVH-EA-fha"/>
                             <constraint firstItem="deV-4F-AdH" firstAttribute="top" secondItem="Tpg-pa-anG" secondAttribute="bottom" constant="24" id="I7r-HF-IS3"/>
+                            <constraint firstItem="Z2I-cI-Uhz" firstAttribute="leading" secondItem="YqY-xU-5SI" secondAttribute="leading" id="IaF-ef-Zmk"/>
                             <constraint firstItem="DO9-L9-mCf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Jci-j3-f3X"/>
                             <constraint firstItem="DO9-L9-mCf" firstAttribute="centerX" secondItem="YqY-xU-5SI" secondAttribute="centerX" id="Y8p-2R-eI8"/>
                             <constraint firstItem="Rhh-I1-9mk" firstAttribute="leading" secondItem="Tpg-pa-anG" secondAttribute="leading" id="bj5-AF-yQ0"/>
                             <constraint firstItem="c62-Hn-T0R" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="51" id="e7V-xg-xTx"/>
                             <constraint firstItem="YqY-xU-5SI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="51" id="h7c-Uy-RH8"/>
+                            <constraint firstItem="Z2I-cI-Uhz" firstAttribute="trailing" secondItem="YqY-xU-5SI" secondAttribute="trailing" id="hDc-iA-IpX"/>
                             <constraint firstItem="DO9-L9-mCf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="92" id="iWZ-Lc-gdg"/>
                             <constraint firstItem="Rhh-I1-9mk" firstAttribute="top" secondItem="YqY-xU-5SI" secondAttribute="bottom" constant="36" id="niP-4W-SB7"/>
                             <constraint firstItem="c62-Hn-T0R" firstAttribute="trailing" secondItem="deV-4F-AdH" secondAttribute="trailing" constant="37" id="qeL-eT-FeP"/>
@@ -147,21 +150,61 @@
         <!--Profile-->
         <scene sceneID="MJh-Mf-Tsr">
             <objects>
-                <viewController id="vAX-fO-IdJ" userLabel="Profile" customClass="ProfileViewController" sceneMemberID="viewController">
+                <viewController title="ProfileViewController" id="vAX-fO-IdJ" userLabel="Profile" customClass="ProfileViewController" customModule="OurSpace" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="IuK-NU-I3v">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="muz-dq-ms1">
-                                <rect key="frame" x="0.0" y="51" width="375" height="567"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lf8-TQ-r5M">
+                                <rect key="frame" x="41" y="132" width="50" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Places:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ead-qK-RrP">
+                                <rect key="frame" x="41" y="199" width="55" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rxd-ZR-lVC">
+                                <rect key="frame" x="108" y="131" width="184" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="184" id="JUt-7m-Mwl"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Hf-Nw-DlK">
+                                <rect key="frame" x="108" y="199" width="104" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="104" id="qlD-sI-ygv"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.43529411759999997" blue="0.3803921569" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Rxd-ZR-lVC" firstAttribute="leading" secondItem="Lf8-TQ-r5M" secondAttribute="trailing" constant="17" id="2sL-Xk-8wS"/>
+                            <constraint firstItem="Rxd-ZR-lVC" firstAttribute="top" secondItem="TYj-pb-y2g" secondAttribute="top" constant="111" id="I6W-G8-DUT"/>
+                            <constraint firstItem="3Hf-Nw-DlK" firstAttribute="baseline" secondItem="ead-qK-RrP" secondAttribute="baseline" id="POX-8e-6P3"/>
+                            <constraint firstItem="ead-qK-RrP" firstAttribute="top" secondItem="Lf8-TQ-r5M" secondAttribute="bottom" constant="46" id="Rzm-zn-pQW"/>
+                            <constraint firstItem="3Hf-Nw-DlK" firstAttribute="leading" secondItem="Rxd-ZR-lVC" secondAttribute="leading" id="THA-Fe-3kK"/>
+                            <constraint firstItem="Lf8-TQ-r5M" firstAttribute="leading" secondItem="TYj-pb-y2g" secondAttribute="leading" constant="41" id="bGp-oz-GQg"/>
+                            <constraint firstItem="Lf8-TQ-r5M" firstAttribute="top" secondItem="TYj-pb-y2g" secondAttribute="top" constant="112" id="mFw-bR-7YO"/>
+                            <constraint firstItem="Lf8-TQ-r5M" firstAttribute="leading" secondItem="ead-qK-RrP" secondAttribute="leading" id="zDd-En-gL9"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="TYj-pb-y2g"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Profile" image="prof1" landscapeImage="prof1" selectedImage="prof1" id="nyo-CX-fmX" userLabel="Profile"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="placeCount" destination="3Hf-Nw-DlK" id="AjH-NZ-xYK"/>
+                        <outlet property="profileEmail" destination="Rxd-ZR-lVC" id="6gj-gF-hkp"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="O4j-hl-4Zh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
